⚒  update controller
